Fixed the horizontal scrollbar!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   background-color: #0000;
-  max-width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .App-logo {
